create table players
(
   id UUID primary key NOT null,
   name varchar (255) NOT null,
   email varchar (255) NOT null
);
